XO_Project_UAT/Project--XOGrp--UAT/src/objects/LocalOppApprovalProcessARApprover__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>SF-1511. By default Approval Processes only support email notifications, so when a Local Approval Process needs AR approval, the OpportunityTrigger generates a notification task and assigns it to appropriate AR representative (currently Shannon Davis as of 10/10/2015). The OpportunityTrigger uses the Full Name + Email specified in this custom setting to query for the User ID record.</description>
    <fields>
        <fullName>Email__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Local Opp Approval Process - AR Approver</label>
</CustomObject>